5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1716_2502.log
== SUBMITION (2019-05-16 15:07:30) 
-- CODE:
from math import*
n=int(input("numero natural: "))

tg=sqrt(12)
co=1
sinal=-1
exp=1
a=3
soma=1/(1*((3)**0))
while(n>co):
	soma=soma+(sinal*(1/(a*((3)**exp))))
	exp+=1
	a+=2
	sinal*=-1
	co+=1
soma=soma*tg
print(round(soma,8))
	

-- EXECUTION TIME:
0.147612
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:25) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = n*e
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = 1/a
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:20:48) 
-- CODE:
from math import *
x = int(input())
n = 3**0
e = 1
y = sqrt(12)
a = n*e
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:08) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = n*(3**e)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = 1/a
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:11) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = n*(3**e)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    b = 1/a
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:41) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:21:46) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- EXECUTION TIME:
0.177772
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.46410162
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.46410162
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.46410162
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:48) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:49) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:21:59) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:05) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:22:06) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
while x > n:
	h = y * b
	n += 1
	e += 2
print(round(h,8))
-- OUTPUT:
3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:25:37) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
while x > n:
	h = y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:25:41) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
while x > n:
	h = y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:15) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    h += y * b
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:29) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:33) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:35) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:37) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:26:44) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:27:01) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:27:06) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:27:09) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += y * b
	n += 1
	e += 2
	s = -1*s
	b = b*s
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:28:14) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += b
	n += 1
	e += 2
	s = -1*s
	b = b*s
h = h*y
print(round(h,8))
-- OUTPUT:
-3.46410162
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:28:27) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += b
	n += 1
	e += 2
	s = -1*s
	b = b*s
	h = h*y
print(round(h,8))
-- OUTPUT:
565980.96408261
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:28:31) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
y = sqrt(12)
a = e*(3**n)
b = 1/a
s = 1
h = 0
while x > n:
	h += b
	n += 1
	e += 2
	s = -1*s
	b = b*s
	h = h*y
print(round(h,8))
-- OUTPUT:
565980.96408261
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:32:23) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
while x > n:
	h += 1/(e*(3**n))
	n += 1
	e += 2
h = h*(sqrt(12))
print(round(h,8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:32:42) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
while x > n:
	h += 1/(e*(3**n))
	n += 1
	e += 2
h = h*(sqrt(12))
print(round(h,8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:32:45) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
while x > n:
	h += 1/(e*(3**n))
	n += 1
	e += 2
h = h*(sqrt(12))
print(round(h,8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:32:47) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
while x > n:
	h += 1/(e*(3**n))
	n += 1
	e += 2
h = h*(sqrt(12))
print(round(h,8))
-- EXECUTION TIME:
0.205845
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:32:49) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
while x > n:
	h += 1/(e*(3**n))
	n += 1
	e += 2
h = h*(sqrt(12))
print(round(h,8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:33:59) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
s = 1
while x > n:
	h += s*(1/(e*(3**n)))
	n += 1
	e += 2
	s = s*-1
h = h*(sqrt(12))
print(round(h,8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:34:03) 
-- CODE:
from math import *
x = int(input())
n = 0
e = 1
h = 0
s = 1
while x > n:
	h += s*(1/(e*(3**n)))
	n += 1
	e += 2
	s = s*-1
h = h*(sqrt(12))
print(round(h,8))
-- EXECUTION TIME:
0.14384
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
